[package]
name = "axum-test-server"
description = "Simple axum todo example api with utoipa and Swagger UI, Rapidoc, Redoc, and Scalar"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Elli Example <example@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.8.0", features = ["macros"]}
axum-server = { version = "0.7", features = ["tls-rustls", "tls-openssl"] }
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
tower = "0.5"
#utoipa = { path = "../../utoipa", features = ["axum_extras"] }
#utoipa-swagger-ui = { path = "../../utoipa-swagger-ui", features = ["axum"] }
#utoipa-axum = { path = "../../utoipa-axum" }
#utoipa-redoc = { path = "../../utoipa-redoc", features = ["axum"] }
#utoipa-rapidoc = { path = "../../utoipa-rapidoc", features = ["axum"] }
#utoipa-scalar = { path = "../../utoipa-scalar", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version="9.0.1", features = ["axum"] }
utoipa-axum = "0.2.0"
blend_result = { git = "https://github.com/bitmuster/BlendResult.git"}
# blend_result = { path = "../BlendResult"}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
tower-http = {version = "0.6.2", features = ["trace"] }

[workspace]
